[tool.poetry]
name = "SafeBox"
version = "0.1.0"
description = ""
authors = ["Hassan Pouralijan <pouralijan@gmail.com>"]

[tool.poetry.dependencies]
python = "<4.0.0,>=3.6.0,==3.7"

PySide6 = "^6.3.0"
pyusb = "^1.2.1"
pyparted = "^3.12.0"
qt-material = "^2.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
